1.9.5
Frontend:
  * FIX: Fixed wrong hostname label in service hover menus

1.9.4
Core:
  * List of hover menu childs (e.g. services in host object hover) can now be
    left unsorted (keep original sorting). This is useful for aggregation objects
    where the single elements have a defined order and should not be sorted by state
    (Configure this per object by adding the attribute hover_childs_sort=k).

Frontend:
  * On demand automaps: Hostgroup filter in header menu is now a searchable dropdown field 
  * FIX: Fixed moving textbox objects in IE

1.9.3
Core:
  * Multisite auth: Dropped support for WATO folder permissions
    (See
    http://git.mathias-kettner.de/git/?p=check_mk.git;a=commit;h=6a1845bcba346111c391f28dfc3214b0e5dd8876)

Frontend:
  * std_html_bar Gadget: Added new optional parameters "perfdata" to specify
  the perfdata index to show and "border" to enable/disable the border of the
  bar using the values 0/1

1.9.2
Core:
  * The default values for the "url" option of map objects can now be
    configured in the map global sections using the options
    host_url, hostgroup_url, service_url, servicegroup_url, map_url,
    dyngroup_url and aggr_url

1.9.1
Core:
  * FIX: Fixed incompatibility with pecl-http (Cannot redeclare http_redirect()) 
  * FIX: Fixed duplicate global section in sample automaps after editing

Frontend:
  * FIX: Fixed wrong positioned labels of gadgets
  * FIX: Added missing stale images of the std_small iconset
  * FIX: Fixed map update (background color, title, favicon) on changed state

1.9
Core:
  * MKBI backend: New option "auth_secret_file" to read the secret from a file

1.9b19
Core:
  * FIX: Fixed "hanging" user/role related actions with older SQLite versions
    (e.g. seen on CentOS 6 or older)

Frontend:
  * FIX: Fixed problems while editing roles of users
  * FIX: Fixed checkHideMenu is not defined issue when header menu is disabled

Installer:
  * FIX: Fixed install of apache config to /etc/apache2/config-available